--- a/package.json
+++ b/package.json
@@ -1,36 +1,27 @@
 {
   "name": "challenge-debt-md",
-  "version": "0.1.0",
+  "version": "1.0.0",
   "description": "Debt of RM",
   "main": "index.js",
-  "directories": {
-    "doc": "docs",
-	"express": "^4.14.0",
+  "dependencies": {
+    "express": "^4.14.0",
     "mongodb": "^2.2.11"
   },
+  "devDependencies": {},
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "echo \"Error: src/index.js is not configured\" && exit 1",
-    "release": "echo \"Error: release system is not configured\" && exit 1",
-    "lint": "echo \"Error: linting system is not configured\" && exit 1",
-    "build": "echo \"Error: build system is not configured\" && exit 1",
-    "bump-version": "echo \"Error: bump-version system is not configured\" && exit 1",
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/jshacks/challenge-debt-md.git"
   },
   "keywords": [
-    "jshacks",
-    "oss",
-    "contributing",
-    "community",
-	"debt",
+    "debt",
     "RM",
     "MD"
   ],
-  "author": "JSHacks <contact@jshacks.io>",
-  "license": "MIT",
+  "author": "DebtMD",
+  "license": "ISC",
   "bugs": {
     "url": "https://github.com/jshacks/challenge-debt-md/issues"
   },
