--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "Debt of RM",
   "main": "index.js",
   "dependencies": {
+    "async": "^2.1.2",
     "express": "^4.14.0",
     "mongodb": "^2.2.11",
     "mongoose": "^4.6.4"
@@ -26,7 +27,7 @@
     "oss",
     "contributing",
     "community",
-	"debt",
+    "debt",
     "RM",
     "MD"
   ],
