--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "async": "^2.1.2",
     "express": "^4.14.0",
     "mongodb": "^2.2.11",
-    "mongoose": "^4.6.4"
+    "mongoose": "^4.6.4",
+    "xlsx": "^0.8.0"
   },
   "devDependencies": {},
   "scripts": {
