--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "dependencies": {
     "async": "^2.1.2",
+    "cors": "^2.8.1",
     "express": "^4.14.0",
     "mongodb": "^2.2.11",
     "mongoose": "^4.6.4",
