--- a/debt-md-front-end/package.json
+++ b/debt-md-front-end/package.json
@@ -13,6 +13,7 @@
     "lint": "eslint --ext .js,.vue src test/unit/specs test/e2e/specs"
   },
   "dependencies": {
+    "browser-request": "^0.3.3",
     "vue": "^2.0.1",
     "vuex": "^2.0.0"
   },
